--- a/CSS/style.css
+++ b/CSS/style.css
@@ -545,7 +545,36 @@ scale: 1.1;
 }
 
 
+/* Carousel */
 
+.carousel-section {
+    height: 85vh;
+    background-color: #3f3f3f;
+    display: grid;
+    justify-content: center;
+}
+
+.carousel-section div h2{
+    color: #f5f5f5;
+    font-size: 2.5rem;
+    text-align: center;
+    margin-top: 25px;
+}
+
+.carousel-section div h2 span{
+    color: #bd7345;
+}
+
+.carousel-inner {
+    height: 500px;
+}
+
+.carousel-inner img {
+width: 100%;
+  max-height: 600px;
+  object-fit: cover;
+  border-radius: 10px;
+}
 
 
 /* Responsive area */
